# Panorama

./: CMakeLists.txt  MSOP  MSOP.cpp  README.txt  blending_alpha  blending_alpha.cpp  blending_direct  blending_direct.cpp  blending_graphcut  blending_graphcut.cpp  blending_photomontage  blending_photomontage.cpp  blending_poisson  blending_poisson.cpp
malibu/: img_list.txt
