cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
find_package( OpenCV REQUIRED )
add_executable( MSOP MSOP.cpp )
add_executable( blending_direct blending_direct.cpp )
add_executable( blending_alpha blending_alpha.cpp )
add_executable( blending_graphcut blending_graphcut.cpp )
add_executable( blending_poisson blending_poisson.cpp )
add_executable( blending_photomontage blending_photomontage.cpp )
#add_executable( modify modify.cpp )
target_link_libraries( MSOP ${OpenCV_LIBS} )
target_link_libraries( blending_direct ${OpenCV_LIBS} )
target_link_libraries( blending_alpha ${OpenCV_LIBS} )
target_link_libraries( blending_graphcut ${OpenCV_LIBS} )
target_link_libraries( blending_poisson ${OpenCV_LIBS} )
target_link_libraries( blending_photomontage ${OpenCV_LIBS} )
#target_link_libraries( modify ${OpenCV_LIBS} )
